{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 34,
  "lineage": "5f8cbb5a-32d9-bc66-ac05-65baf84b6e5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:582835795642:instance/i-08c1873427027907a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c1873427027907a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2972a259958b478",
            "private_dns": "ip-10-53-101-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.53.101.5",
            "public_dns": "ec2-3-81-24-15.compute-1.amazonaws.com",
            "public_ip": "3.81.24.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd6ddb473de71eee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d465b7daa01db09",
            "tags": {
              "Name": "prod-vpc-terraform-ec2",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "prod-vpc-terraform-ec2",
              "environment": "prod",
              "owners": "aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d585fca9ba98e5f8"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:security-group/sg-0d585fca9ba98e5f8",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d585fca9ba98e5f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-vpc-terraform-ec2-sg",
            "name_prefix": "",
            "owner_id": "582835795642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-vpc-terraform-ec2-sg",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "prod-vpc-terraform-ec2-sg",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:network-acl/acl-0ee01ce1c1403bf8f",
            "default_network_acl_id": "acl-0ee01ce1c1403bf8f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ee01ce1c1403bf8f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "582835795642",
            "subnet_ids": [
              "subnet-017d81c4d43268801",
              "subnet-061c58dd8a586f592",
              "subnet-06d465b7daa01db09",
              "subnet-0a4101c0d37393994",
              "subnet-0a62a6f2fa1833ff5",
              "subnet-0a7d9245caf966df1",
              "subnet-0b8300f14b5fc724a",
              "subnet-0eb62b815a0b9fe9c"
            ],
            "tags": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:route-table/rtb-0465618bf98c76fd3",
            "default_route_table_id": "rtb-0465618bf98c76fd3",
            "id": "rtb-0465618bf98c76fd3",
            "owner_id": "582835795642",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:security-group/sg-09e17b0eceb67199e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09e17b0eceb67199e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "582835795642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-default",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042d57936c0ea942c",
            "arn": "arn:aws:ec2:us-east-1:582835795642:elastic-ip/eipalloc-042d57936c0ea942c",
            "domain": "vpc",
            "id": "eipalloc-042d57936c0ea942c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-184-61.compute-1.amazonaws.com",
            "public_ip": "3.209.184.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-terraform-aws-prod-us-east-1a",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-us-east-1a",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:internet-gateway/igw-02af4c862834b7786",
            "id": "igw-02af4c862834b7786",
            "owner_id": "582835795642",
            "tags": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-042d57936c0ea942c",
            "association_id": "eipassoc-041c4c4a543de5682",
            "connectivity_type": "public",
            "id": "nat-02acde456a6258dc3",
            "network_interface_id": "eni-01014e9be6873dc1a",
            "private_ip": "10.53.101.156",
            "public_ip": "3.209.184.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d465b7daa01db09",
            "tags": {
              "Name": "vpc-terraform-aws-prod-us-east-1a",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-us-east-1a",
              "environment": "prod",
              "owners": "aws"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0836eb2dfcd075f691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02acde456a6258dc3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0836eb2dfcd075f69",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02af4c862834b7786",
            "id": "r-rtb-0540870d96579eb3c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0540870d96579eb3c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:route-table/rtb-0f30f8f9fe87a05f3",
            "id": "rtb-0f30f8f9fe87a05f3",
            "owner_id": "582835795642",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-aws-prod-db",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-db",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:route-table/rtb-0836eb2dfcd075f69",
            "id": "rtb-0836eb2dfcd075f69",
            "owner_id": "582835795642",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-aws-prod-private",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-private",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:route-table/rtb-0540870d96579eb3c",
            "id": "rtb-0540870d96579eb3c",
            "owner_id": "582835795642",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-terraform-aws-prod-public",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod-public",
              "environment": "prod",
              "owners": "aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d4a6d8735095c2f",
            "route_table_id": "rtb-0f30f8f9fe87a05f3",
            "subnet_id": "subnet-0a62a6f2fa1833ff5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062c94882caf32223",
            "route_table_id": "rtb-0f30f8f9fe87a05f3",
            "subnet_id": "subnet-0b8300f14b5fc724a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f2a6ccc5d207342",
            "route_table_id": "rtb-0f30f8f9fe87a05f3",
            "subnet_id": "subnet-0eb62b815a0b9fe9c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02313c097183219cf",
            "route_table_id": "rtb-0836eb2dfcd075f69",
            "subnet_id": "subnet-0a4101c0d37393994"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094b00a7ecbb32684",
            "route_table_id": "rtb-0836eb2dfcd075f69",
            "subnet_id": "subnet-017d81c4d43268801"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8818dc4491b73d8",
            "route_table_id": "rtb-0836eb2dfcd075f69",
            "subnet_id": "subnet-061c58dd8a586f592"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca25b44ceb5b70c2",
            "route_table_id": "rtb-0540870d96579eb3c",
            "subnet_id": "subnet-06d465b7daa01db09"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9182938cdf15c67",
            "route_table_id": "rtb-0540870d96579eb3c",
            "subnet_id": "subnet-03c4a2886bf4a890b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af66d09394e3504d",
            "route_table_id": "rtb-0540870d96579eb3c",
            "subnet_id": "subnet-0a7d9245caf966df1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-0a62a6f2fa1833ff5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.53.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a62a6f2fa1833ff5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-0b8300f14b5fc724a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.53.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8300f14b5fc724a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-0eb62b815a0b9fe9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.53.153.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb62b815a0b9fe9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Database Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Database Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-0a4101c0d37393994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.53.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4101c0d37393994",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-017d81c4d43268801",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.53.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017d81c4d43268801",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-061c58dd8a586f592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.53.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061c58dd8a586f592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-06d465b7daa01db09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.53.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d465b7daa01db09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-03c4a2886bf4a890b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.53.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c4a2886bf4a890b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:subnet/subnet-0a7d9245caf966df1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.53.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7d9245caf966df1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "582835795642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "environment": "prod",
              "owners": "aws"
            },
            "vpc_id": "vpc-0f01b7b6f00414389"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:582835795642:vpc/vpc-0f01b7b6f00414389",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.53.0.0/16",
            "default_network_acl_id": "acl-0ee01ce1c1403bf8f",
            "default_route_table_id": "rtb-0465618bf98c76fd3",
            "default_security_group_id": "sg-09e17b0eceb67199e",
            "dhcp_options_id": "dopt-07d6c5908683b82be",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f01b7b6f00414389",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0465618bf98c76fd3",
            "owner_id": "582835795642",
            "tags": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            },
            "tags_all": {
              "Name": "vpc-terraform-aws-prod",
              "environment": "prod",
              "owners": "aws"
            }
          }
        }
      ]
    }
  ]
}